<resources>
    <string name="app_name">Financial Assistant</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- menu lateral -->
    <string name="menu_balance">Balanço</string>
    <string name="menu_payments">Pagamentos</string>
    <string name="menu_receipts">Recebimentos</string>
    <string name="menu_investments">Investimentos</string>
    <string name="menu_accounts">Minhas contas</string>
    <string name="menu_cards">Meus cartões</string>
    <string name="menu_settings">Configurações</string>
    <string name="menu_aboutApp">Sobre o app</string>
    <string name="menu_aboutDev">Sobre o desenvolvedor</string>
    <string name="menu_contribute">Contribua com app</string>


    <string name="menu_home">Home</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>