<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_balance"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_balance" />

        <item
            android:id="@+id/nav_payments"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_payments" />

        <item
            android:id="@+id/nav_receipts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_receipts" />

        <item
            android:id="@+id/nav_investments"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_investments" />

        <item
            android:id="@+id/nav_accounts"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_accounts" />

        <item
            android:id="@+id/nav_cards"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_cards" />

        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_settings" />

        <item
            android:id="@+id/nav_aboutApp"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_aboutApp" />

        <item
            android:id="@+id/nav_aboutDev"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_aboutDev" />

        <item
            android:id="@+id/nav_contribute"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_contribute" />
    </group>
</menu>